# obs-screenshot-plugin-master

./: CMakeLists.txt  screenshot-filter.c
